--- a/src/index.css
+++ b/src/index.css
@@ -2,11 +2,12 @@
 @tailwind components;
 @tailwind utilities;
 
-.login-div{
+body{
   background-color: #ffffff;
 background-image: url("https://www.transparenttextures.com/patterns/cubes.png");
 /* This is mostly intended for prototyping; please download the pattern and re-host for production environments. Thank you! */
 }
+
 
 
 /* body {
